A lot more stuff

--- a/src/content/826chi-2017.md
+++ b/src/content/826chi-2017.md
@@ -5,8 +5,8 @@ featuredImage: /posts/826chi-2017/hero.png
 
 This is a 2017 annual report for [826CHI](https://www.826chi.org/). 826CHI is a nonprofit organization in Chicago dedicated to supporting students with their creative and expository writing skills and to helping teachers inspire their students to write.
 
-<img alt="46" src="/posts/826chi-2017/46.png" />
+<img alt="826CHI 2017 annual report screenshot" src="/posts/826chi-2017/46.png" />
 
-<img alt="33" src="/posts/826chi-2017/33.png" />
+<img alt="826CHI 2017 annual report screenshot" src="/posts/826chi-2017/33.png" />
 
 Go check it out [here](https://jaredsalzano.com/sites/826chi-2017/index.html).
