--- a/src/content/826chi-2017.md
+++ b/src/content/826chi-2017.md
@@ -1,6 +1,7 @@
 ---
 title: 826CHI - 2017 Annual Report
 featuredImage: /posts/826chi-2017/hero.png
+order: 5
 ---
 
 This is a 2017 annual report for [826CHI](https://www.826chi.org/). 826CHI is a nonprofit organization in Chicago dedicated to supporting students with their creative and expository writing skills and to helping teachers inspire their students to write.
