Edit config for 826 sites

--- a/src/content/826chi-2017.md
+++ b/src/content/826chi-2017.md
@@ -10,4 +10,4 @@ This is a 2017 annual report for [826CHI](https://www.826chi.org/). 826CHI is a 
 
 <img alt="826CHI 2017 annual report screenshot" src="/posts/826chi-2017/33.png" />
 
-Go check it out [here](https://jaredsalzano.com/sites/826chi-2017/index.html).
+Go check it out [here](https://826chi-2017.jaredsalzano.com/).
