--- a/src/content/826chi-2016.md
+++ b/src/content/826chi-2016.md
@@ -6,4 +6,10 @@ order: 6
 
 This is a 2016 annual report for [826CHI](https://www.826chi.org/). 826CHI is a nonprofit organization in Chicago dedicated to supporting students with their creative and expository writing skills and to helping teachers inspire their students to write.
 
+<img alt="826CHI 2016 annual report screenshot" src="/posts/826chi-2016/hero.jpg" />
+
+<img alt="826CHI 2016 annual report screenshot" src="/posts/826chi-2016/1.png" />
+
+<img alt="826CHI 2016 annual report screenshot" src="/posts/826chi-2016/2.png" />
+
 Go check it out [here](https://826chi-2016.jaredsalzano.com/).
