--- a/src/content/826chi-2017.md
+++ b/src/content/826chi-2017.md
@@ -6,6 +6,8 @@ order: 5
 
 This is a 2017 annual report for [826CHI](https://www.826chi.org/). 826CHI is a nonprofit organization in Chicago dedicated to supporting students with their creative and expository writing skills and to helping teachers inspire their students to write.
 
+<img alt="826CHI 2017 annual report screenshot" src="/posts/826chi-2017/1.png" />
+
 <img alt="826CHI 2017 annual report screenshot" src="/posts/826chi-2017/46.png" />
 
 <img alt="826CHI 2017 annual report screenshot" src="/posts/826chi-2017/33.png" />
