Add posts, and a lot of other stuff

--- a/src/content/826chi-2017.md
+++ b/src/content/826chi-2017.md
@@ -1,13 +1,12 @@
 ---
 title: 826CHI - 2017 Annual Report
 featuredImage: /posts/826chi-2017/hero.png
+imgClass: object-left-top
 order: 5
 ---
 
-This is a 2017 annual report for [826CHI](https://www.826chi.org/). 826CHI is a nonprofit organization in Chicago dedicated to supporting students with their creative and expository writing skills and to helping teachers inspire their students to write.
+This [2017 annual report](https://826chi-2017.jaredsalzano.com/) for Chicago nonprofit [826CHI](https://www.826chi.org/) showcases the organization's commitment to supporting students in developing their creative and expository writing skills and to helping teachers inspire their students to write.
 
-<img alt="826CHI 2017 annual report screenshot" src="/posts/826chi-2017/46.png" />
+Designed by my brother Gage at [Studio Apartment](https://studioapt.co/).
 
-<img alt="826CHI 2017 annual report screenshot" src="/posts/826chi-2017/33.png" />
-
-Go check it out [here](https://jaredsalzano.com/sites/826chi-2017/index.html).
+<img style="box-shadow: none" alt="826CHI 2017 annual report screenshot" src="/posts/826chi-2017/826-2017-5@3x.png" />
