--- a/src/content/826chi-2016.md
+++ b/src/content/826chi-2016.md
@@ -1,9 +1,12 @@
 ---
 title: 826CHI - 2016 Annual Report
 featuredImage: /posts/826chi-2016/hero.jpg
+imgClass: object-left-top
 order: 6
 ---
 
-This is a 2016 annual report for [826CHI](https://www.826chi.org/). 826CHI is a nonprofit organization in Chicago dedicated to supporting students with their creative and expository writing skills and to helping teachers inspire their students to write.
+This [2016 annual report](https://826chi-2016.jaredsalzano.com/) for Chicago nonprofit [826CHI](https://www.826chi.org/) showcases the organization's commitment to supporting students in developing their creative and expository writing skills and to helping teachers inspire their students to write.
 
-Go check it out [here](https://jaredsalzano.com/sites/826chi-2016/index.html).
+Designed by my brother Gage at [Studio Apartment](https://studioapt.co/).
+
+<img alt="826CHI 2016 annual report screenshot" src="/posts/826chi-2016/hero.jpg" />
