Scope css, add ts-lint script, proofread FAQ, fix up carousel, mobile styles, etc. Ready to roll

--- a/src/content/faq/3.md
+++ b/src/content/faq/3.md
@@ -2,4 +2,4 @@
 question: How much will it cost?
 ---
 
-Building a custom website typically starts at $2,000. More complex web applications are closer to $10,000. We can agree on fixed-price milestones or track hours, or, in the case of maintenance, agree on a monthly retainer. If I see an opportunity to simplify the project or save you money in some way, I will tell you.
+Building a custom website typically starts at $2,000. More complex web applications are closer to $10,000. We can agree on fixed-price milestones or track hours, or, in the case of maintenance, agree on a monthly retainer. If I see an opportunity to save you money (by simplifying a project phase or in some other way), I will tell you.
