--- a/src/content/faq/6.md
+++ b/src/content/faq/6.md
@@ -2,4 +2,4 @@
 question: Which technologies do you use?
 ---
 
-I've worked with most of the popular front-end tools over the years, but it's typically React, Node.js, and cloud services like Google Cloud Platform. I really like <a href="https://nextjs.org/" class="text-blue-700 underline" target="_blank">Next.js</a>. If a CMS is needed to make content editing easier for you or your team, we can choose one that suits the project. For backend services, I typically reach for Firebase or, if we want to build an API, PostgreSQL. For mobile apps, I use React Native. You can see my <a href="/resume.pdf" class="text-blue-700 underline" target="_blank">resume</a> for more.
+I've worked with most of the popular front-end tools over the years, but it's typically React, Node.js, and cloud services like Google Cloud Platform. I really like <a href="https://nextjs.org/" class="text-blue-700 underline" target="_blank">Next.js</a>. If we need a CMS to make content editing easier for you or your team, we can choose one that suits the project. For backend services, I typically reach for Firebase or, if we want to build an API, PostgreSQL. For mobile apps, I use React Native. You can see my <a href="/resume.pdf" class="text-blue-700 underline" target="_blank">resume</a> for more.
