--- a/src/content/posts/826chi-2016.md
+++ b/src/content/posts/826chi-2016.md
@@ -5,8 +5,8 @@ imgClass: object-left-top
 order: 7
 ---
 
-This [2016 annual report](https://826chi-2016.jaredsalzano.com/) for Chicago nonprofit [826CHI](https://www.826chi.org/) showcases the organization's commitment to supporting students in developing their creative and expository writing skills and to helping teachers inspire their students to write.
+This [2016 annual report](https://826chi-2016.jaredsalzano.com/) for Chicago nonprofit [826CHI](https://www.826chi.org/) showcases the organization's work supporting students in developing their writing skills and helping teachers inspire their students to write.
 
-Designed by my brother Gage at [Studio Apartment](https://studioapt.co/).
+This was the first website I ever built for a client. My brother, [Gage](https://gagesalzano.com/), took it on as a pro-bono project and invited me to help by writing code to match his designs. It was a really tricky first project, with a lot of free-floating elements that needed to work across screen sizes, and I also learned to draw with the HTML `<canvas>` element.
 
 <img alt="826CHI 2016 annual report screenshot" src="/posts/826chi-2016/hero.jpg" />
