Copy edits, and use apostrophes

--- a/src/content/faq/1.md
+++ b/src/content/faq/1.md
@@ -2,4 +2,4 @@
 question: What services do you offer?
 ---
 
-I can help you with almost anything web-related, from simple landing pages or blogs to complex web applications. I can also make mobile apps using React Native. If you know exactly what you want, I'll  do that. Otherwise, I can make suggestions or help develop your idea. I can work on my own, or, if you have a team that needs dev support, I'm happy to join and help.
+I can help you with almost anything web-related, from simple landing pages or blogs to complex web applications. I can also make mobile apps using React Native. If you know exactly what you want, I’ll  do that. Otherwise, I can make suggestions or help develop your idea. I can work on my own, or, if you have a team that needs dev support, I’m happy to join and help.
