--- a/src/content/faq/4.md
+++ b/src/content/faq/4.md
@@ -1,5 +1,5 @@
 ---
-question: What's the process of working together like?
+question: What’s the process of working together like?
 ---
 
-First, we can meet on a call or somewhere in NYC to discuss the project. Then, I'll send an estimate of how much I think it will cost and how long I think it will take. Typically, I can start right away and progress is fast. We can meet as much as you like to discuss how it's going. I can share a password-protected preview link so you can track the progress. If you want to manage the hosting and source code, we'll keep everything on your accounts. Otherwise, I can host it for you. I'll remain available after the project for any updates you may need.
+First, we can meet on a call or somewhere in NYC to discuss the project. Then, I’ll send an estimate of how much I think it will cost and how long I think it will take. Typically, I can start right away and progress is fast. We can meet as much as you like to discuss how it’s going. I can share a password-protected preview link so you can track the progress. If you want to manage the hosting and source code, we’ll keep everything on your accounts. Otherwise, I can host it for you. I’ll remain available after the project for any updates you may need.
