--- a/src/content/faq/5.md
+++ b/src/content/faq/5.md
@@ -2,4 +2,4 @@
 question: How available are you to make updates after the project is finished?
 ---
 
-I'll always be available, and I typically complete minor updates within 48 hours.
+I’ll always be available, and I typically complete minor updates within 48 hours.
