Update projects and FAQ

--- a/src/content/faq/6.md
+++ b/src/content/faq/6.md
@@ -2,4 +2,4 @@
 question: Which technologies do you use?
 ---
 
-I’ve worked with most of the popular front-end tools over the years, but it’s typically React, Node.js, and cloud services like Google Cloud Platform. I really like <a href="https://nextjs.org/" target="_blank">Next.js</a>. If we need a CMS to make content editing easier for you or your team, we can choose one that suits the project. For backend services, I typically reach for Firebase or, if we want to build an API, PostgreSQL. For mobile apps, I use React Native. You can see my <a href="/resume.pdf" target="_blank">resume</a> for more.
+I’ve worked with most of the popular front-end tools over the years, but lately I default to React, Next.js, and Tailwind CSS. For back-end services, Google Cloud Platform typically has what we need. If we need a CMS to make content editing easier for you or your team, we can choose one that suits the project. For mobile apps, I use React Native. You can see my <a href="/resume.pdf" target="_blank">resume</a> for more about my experience. I’m always happy to learn something new.
