Major content and layout changes across the site

--- a/src/content/posts/826chi-2016.md
+++ b/src/content/posts/826chi-2016.md
@@ -2,7 +2,7 @@
 title: 826CHI - 2016 Annual Report
 featuredImage: /posts/826chi-2016/hero.jpg
 imgClass: object-left-top
-order: 9
+excerpt: This 2016 annual report for Chicago nonprofit 826CHI showcases the organization's work supporting students in developing their writing skills and helping teachers inspire their students to write.
 ---
 
 This [2016 annual report](https://826chi-2016.jaredsalzano.com/) for Chicago nonprofit [826CHI](https://www.826chi.org/) showcases the organization’s work supporting students in developing their writing skills and helping teachers inspire their students to write.
