--- a/src/content/posts/826chi-2017.md
+++ b/src/content/posts/826chi-2017.md
@@ -2,7 +2,7 @@
 title: 826CHI - 2017 Annual Report
 featuredImage: /posts/826chi-2017/hero.png
 imgClass: object-left-top
-order: 10
+excerpt: This 2017 annual report for Chicago nonprofit 826CHI showcases the organization's work supporting students in developing their writing skills and helping teachers inspire their students to write.
 ---
 
 This [2017 annual report](https://826chi-2017.jaredsalzano.com/) for Chicago nonprofit [826CHI](https://www.826chi.org/) showcases the organization’s work supporting students in developing their writing skills and helping teachers inspire their students to write.
